--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     </head>
     <body>
         <h1>Simple Interest Calculator</h1>
-
-        Amount <input type="number"  id="principal">  <br/>
-        Rate <input type="number"  id="rate">  <br/>
-        No. of Years <input type="number"  id="years">  <br/>
-        Interest : <span id="result"></span><br>
-
-        <button onclick="compute()">Compute</button>
+            <div>
+                Amount <input type="number"  id="principal">  <br/>
+                Rate <input type="number"  id="rate">  <br/>
+                No. of Years <input type="number"  id="years">  <br/>
+                Interest : <span id="result"></span><br>
+                <button onclick="compute()">Compute</button>
+            </div>
     </body>
 </html>
