--- a/index.html
+++ b/index.html
@@ -7,15 +7,21 @@
         <div>
             <h1>Simple Interest Calculator</h1>
                 <form>
-                    <label for="principal">Amount </label><br/>
+                    <label for="principal">Amount </label>
                     <input type="number" id="principal" name="principal"><br/>
-                    <label for="rate">Rate</label><br/>
-                    <input type="number" id="rate" name="rate"><br/>
-                    <label for="years">No. of Years</label><br/>
-                    <input type="number" id="years" name="years"><br/>
+                    <label for="rate">Interest Rate</label>
+                    <input type="range" id="rate" name="rate"><br/>
+                    <label for="years">No. of Years</label>
+                    <select type="number" id="years" name="years"><br/>
+                        <option value="1">1</option>
+                        <option value="5">5</option>
+                        <option value="10">10</option>
+                        <option value="20">20</option>
+                        <option value="30">30</option>
+                    </select>
                     <label for="result">Interest</label>
                     <span id="result"></span><br>
-                    <button onclick="compute()">Compute</button>
+                    <button onclick="compute()">Compute Interest</button>
                 </form>
         </div>
     </body>
