--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
                     <input type="number" id="principal" name="principal"><br/>
                     </br>
                     <label for="rate">Interest Rate</label>
-                    <input type="range" id="rate" name="rate"><br/>
+                    <input type="range" id="rate" name="rate" min="1" max="30"><br/>
                     </br>
                     <label for="years">No. of Years</label>
                     <select type="number" id="years" name="years"><br/>
