--- a/index.html
+++ b/index.html
@@ -23,8 +23,9 @@
                     </select>
                     </br>
                     <span id="result"></span><br>
-                    <button onclick="compute()">Compute Interest</button>
+                    <button onclick="compute()"> Compute Interest </button>
                 </form>
+            <p>&#169; Everyone Can Get Rich</p>
         </div>
     </body>
 </html>
