--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
                     <input type="number" id="principal" name="principal"><br/>
                     </br>
                     <label for="rate">Interest Rate</label>
-                    <input type="range" id="rate" name="rate" min="1" max="30"><br/>
+                    <input type="range" id="rate" name="rate" value="3.5" min="1" max="30" oninput="this.nextElementSibling.value = this.value"><br/>
                     </br>
                     <label for="years">No. of Years</label>
                     <select type="number" id="years" name="years"><br/>
@@ -25,6 +25,7 @@
                     <span id="result"></span><br>
                     <button onclick="compute()"> Compute Interest </button>
                 </form>
+            </br>
             <p>&#169; Everyone Can Get Rich</p>
         </div>
     </body>
