--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
                     <input type="number" id="principal" name="principal"><br/>
                     </br>
                     <label for="rate">Interest Rate</label>
-                    <input type="range" id="rate" name="rate" value="3.5" min="1" max="30" onchange="updateTextInput(this.value);>
-                    <input type="text" id="textInput" value="">
+                    <input type="range" id="rate" name="rate" value="0" min="1" max="30" oninput="amount.value=rangeInput.value">
+                    <output id="amount" name="amount" for="rangeInput">0</output>
                     <br/>
                     </br>
                     <label for="years">No. of Years</label>
