--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
                     <label for="principal">Amount </label>
                     <input type="number" id="principal" name="principal"><br/>
                     </br>
-                    <label for="rate">Interest Rate</label>
-                    <input type="range" id="rate" name="rate" value="0" min="1" max="30" oninput="amount.value=rangeInput.value">
+                    <label for="rangeInput">Interest Rate</label>
+                    <input type="range" id="rangeInput" name="rangeInput" value="0" min="1" max="30" step="0.5" oninput="amount.value=rangeInput.value">
                     <output id="amount" name="amount" for="rangeInput">0</output>
                     <br/>
                     </br>
