--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
                         <option value="30">30</option>
                     </select>
                     </br>
-                    <span id="result"></span><br>
                     <button onclick="compute()"> Compute Interest </button>
+                    <span id="result">If you deposit </span><br>
                 </form>
             </br>
             <p>&#169; Everyone Can Get Rich</p>
