--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
                     </br>
                     <label for="rangeInput">Interest Rate</label>
                     <input type="range" id="rangeInput" name="rangeInput" value="0" min="1" max="30" step="0.5" oninput="amount.value=rangeInput.value">
-                    <output id="amount" name="amount" for="rangeInput">0<p>%</p></output>
+                    <output id="amount" name="amount" for="rangeInput">0<span>%</span></output>
                     <br/>
                     </br>
                     <label for="years">No. of Years</label>
