--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
                         <option value="30">30</option>
                     </select>
                     </br>
-                    <button onclick="compute()"> Compute Interest </button>
+                    <button onclick="compute()"> Compute Interest </button></br>
+                    </br>
                     <span id="result">If you deposit </span><br>
                 </form>
             </br>
