--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     </br>
                     <button onclick="compute()"> Compute Interest </button></br>
                     </br>
-                    <span id="result">If you deposit </span><br>
+                    <span>If you deposit </span><span id="result"></span><br>
                 </form>
             </br>
             <p>&#169; Everyone Can Get Rich</p>
