--- a/index.html
+++ b/index.html
@@ -26,7 +26,14 @@
                     </br>
                     <button onclick="compute()"> Compute Interest </button></br>
                     </br>
-                    <span>If you deposit </span><span id="result"></span><br>
+                    <span>If you deposit </span><span id="principal"></span><span>,</span><br>
+                    </br>
+                    <span>at an interest rate of </span><span id="rangeInput"></span><span>.</span><br>
+                    </br>
+                    <span>You will receive the amount of </span><span id="result"></span><span>,</span><br>
+                    </br>
+                    <span>in the year </span><span id="years"></span><br>
+                    <span id="result"></span><br>
                 </form>
             </br>
             <p>&#169; Everyone Can Get Rich</p>
