--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
                     </select>
                     </br>
                     <button onclick="compute()"> Compute Interest </button></br>
+                </form>
+                <div onload="calculate()">
                     </br>
                     <span>If you deposit </span><span id="principal"></span><span>,</span><br>
                     </br>
@@ -34,7 +36,7 @@
                     </br>
                     <span>in the year </span><span id="years"></span><br>
                     <span id="result"></span><br>
-                </form>
+                </div>
             </br>
             <p>&#169; Everyone Can Get Rich</p>
         </div>
