--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <script src="script.js"></script>
     <link rel="stylesheet" href="style.css">
     </head>
-    <body>
+    <body onload="compute()">
         <div>
             <h1>Simple Interest Calculator</h1>
                 <form>
@@ -26,7 +26,7 @@
                     </br>
                     <button onclick="compute()"> Compute Interest </button></br>
                 </form>
-                <div onload="calculate()">
+
                     </br>
                     <span>If you deposit </span><span id="principal"></span><span>,</span><br>
                     </br>
@@ -36,7 +36,7 @@
                     </br>
                     <span>in the year </span><span id="years"></span><br>
                     <span id="result"></span><br>
-                </div>
+
             </br>
             <p>&#169; Everyone Can Get Rich</p>
         </div>
