--- a/index.html
+++ b/index.html
@@ -8,30 +8,30 @@
             <h1>Simple Interest Calculator</h1>
                 <form>
                     <label for="principal">Amount </label>
-                    <input type="number" id="principal" name="principal"><br/>
-                    </br>
+                    <input type="number" id="principal" name="principal"><br>
+                    <br>
                     <label for="rangeInput">Interest Rate</label>
                     <input type="range" id="rangeInput" name="rangeInput" value="0" min="1" max="30" step="0.5" oninput="amount.value=rangeInput.value">
                     <output id="amount" name="amount" for="rangeInput">0<span>%</span></output>
-                    <br/>
-                    </br>
+                    <br>
+                    <br>
                     <label for="years">No. of Years</label>
-                    <select type="number" id="years" name="years"><br/>
+                    <select type="number" id="years" name="years"><br>
                         <option value="1">1</option>
                         <option value="5">5</option>
                         <option value="10">10</option>
                         <option value="20">20</option>
                         <option value="30">30</option>
                     </select>
-                    </br>
-                    <button onclick="compute()"> Compute Interest </button></br>
+                    <br>
+                    <button onclick="compute()"> Compute Interest </button><br>
                 
 
-                    </br>
+                    <br>
                     <span id="principal"></span><span>,</span><br>
                    
                 </form>
-            </br>
+            <br>
             <p>&#169; Everyone Can Get Rich</p>
         </div>
     </body>
