--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 
 
                     <br>
-                    <span id="principal"></span><span>,</span><br>
+                    <span id="principal_text"></span><span>,</span><br>
                    
                 </form>
             <br>
