--- a/index.html
+++ b/index.html
@@ -25,10 +25,8 @@
                     </select>
                     <br>
                     <button onclick="compute()"> Compute Interest </button><br>
-                
-
                     <br>
-                    <span id="principal_text"></span><span>,</span><br>
+                    <span id="principal_text"> </span><span id="principal"> </span><br>
                    
                 </form>
             <br>
