--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     <br>
                     <button onclick="compute()"> Compute Interest </button><br>
                     <br>
-                    <div id="principal_text"> </divn><div id="principal"> </div><br>
+                    <span id="result"> </span><div id="principal"> </div><br>
                    
                 </form>
             <br>
