--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     <br>
                     <button onclick="compute()"> Compute Interest </button><br>
                     <br>
-                    <span id="principal_text"> </span><br>
+                    <span id="principal_text"> </span><span id="principal"> </span><span id="principal_comma"> </span><br>
                     <span id="result"> </span><br>
                    
                 </form>
