--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
                     <button onclick="compute()"> Compute Interest </button><br>
                     <br>
                     <span id="principal_text"> </span><span id="principal"> </span><span id="principal_comma"> </span><br>
-                    <span id="result"> </span><br>
+                    <span id="rangeInput_text"> </span><span id="rangeInput"> </span><span id="rangeInput_comma"> </span><br>
+                    <span id="result_text"> </span><span id="result"> </span><span id="result_comma"> </span><br>
+                    <span id="years_text"> </span><span id="years"> </span><br>
                    
                 </form>
             <br>
