--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
                     <br>
                     <button onclick="compute()"> Compute Interest </button><br>
                     <br>
-                    <span id="principal_text"> </span><span id="principal"> </span><span id="principal_comma"> </span><br>
-                    <span id="rangeInput_text"> </span><span id="rangeInput"> </span><span id="rangeInput_comma"> </span><br>
-                    <span id="result_text"> </span><span id="result"> </span><span id="result_comma"> </span><br>
-                    <span id="years_text"> </span><span id="years"> </span><br>
+                    <span id="principal_text"> </span><span id="principal"></span><br>
+                    <span id="rangeInput_text"> </span><span id="rangeInput"></span><br>
+                    <span id="result_text"> </span><span id="result"></span><br>
+                    <span id="years_text"> </span><span id="result_years"></span><br>
                    
                 </form>
             <br>
