--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     <br>
                     <span id="principal_text"> </span><span id="principal"></span><br>
                     <span id="rangeInput_text"> </span><span id="rangeInput"></span><br>
-                    <span id="result_text"> </span><span id="result"></span><br>
+                    <span id="result_text"> </span><span id="result"></span><span id="result_comma"></span><br>
                     <span id="years_text"> </span><span id="result_years"></span><br>
                 </form>
                 <br>
