--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
                     <input type="number" id="principal" name="principal"><br>
                     <br>
                     <label for="rangeInput">Interest Rate</label>
-                    <input type="range" id="rangeInput" name="rangeInput" value="0%" min="1%" max="30%" step="0.5%" oninput="amount.value=rangeInput.value">
+                    <input type="range" id="rangeInput" name="rangeInput" value="0" min="0" max="10" step="0.5" oninput="amount.value=rangeInput.value">
                     <output id="amount" name="amount" for="rangeInput">0<span>%</span></output>
                     <br>
                     <br>
