--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
                     <br>
                     <button onclick="compute()"> Compute Interest </button><br>
                     <br>
-                    <span id="principal_text"></span><span id="principal"></span>
-                    <span id="rangeInput_text"></span><span id="rangeInput"></span><br>
+                    <p><span id="principal_text"></span><span id="principal"></span></p>
+                    <p><span id="rangeInput_text"></span><span id="rangeInput"></span></p>
                     <span id="result_text"></span><span id="result"></span><span id="result_comma"></span><br>
                     <span id="years_text"></span><span id="result_years"></span><br>
                 
