--- a/index.html
+++ b/index.html
@@ -23,15 +23,15 @@
                         <option value="20">20</option>
                         <option value="30">30</option>
                     </select>
-                </form>
+                
                     <br>
                     <button onclick="compute()"> Compute Interest </button><br>
                     <br>
                     <p><span id="principal_text"></span><span id="principal"></span></p>
                     <p><span id="rangeInput_text"></span><span id="rangeInput"></span></p>
-                    <span id="result_text"></span><span id="result"></span><span id="result_comma"></span><br>
-                    <span id="years_text"></span><span id="result_years"></span><br>
-                
+                    <p><span id="result_text"></span><span id="result"></span><span id="result_comma"></span></p>
+                    <p><span id="years_text"></span><span id="result_years"></span></p>
+                </form>
                 <br>
             <p>&#169; Everyone Can Get Rich</p>
         </div>
