--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
             <h1>Simple Interest Calculator</h1>
                 <form>
                     <label for="principal">Amount </label>
-                    <input type="number" id="principal" name="principal"><br>
+                    <input type="number" id="principal" name="principal" onclick = "checkNegativeValue()"><br>
                     <br>
                     <label for="rangeInput">Interest Rate</label>
                     <input type="range" id="rangeInput" name="rangeInput" value="0" min="0" max="10" step="0.5" oninput="amount.value=rangeInput.value">
