--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
             <h1>Simple Interest Calculator</h1>
                 <form>
                     <label for="principal">Amount </label>
-                    <input type="number" id="principal" name="principal" onkeydown = "checkNegativeValue()" value = "Display"><br>
+                    <input type="number" id="principal" name="principal" onkeydown="checkNegativeValue()" value = "Display"><br>
                     <br>
                     <label for="rangeInput">Interest Rate</label>
                     <input type="range" id="rangeInput" name="rangeInput" value="0" min="0" max="10" step="0.5" oninput="amount.value=rangeInput.value">
@@ -25,9 +25,9 @@
                     </select>
                 
                     <br>
-                    <button onclick="compute()"> Compute Interest </button><br>
+                    <button onclick="compute(); bgColor();"> Compute Interest </button><br>
                     <br>
-                    <p><span id="principal_text"></span><span id="principal" onchange="bgColor()"></span></p>
+                    <p><span id="principal_text"></span><span id="principal"></span></p>
                     <p><span id="rangeInput_text"></span><span id="rangeInput"></span></p>
                     <p><span id="result_text"></span><span id="result"></span><span id="result_comma"></span></p>
                     <p><span id="years_text"></span><span id="result_years"></span></p>
