--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     </select>
                 
                     <br>
-                    <button onclick="compute(); bgColor();"> Compute Interest </button><br>
+                    <button onclick="compute();"> Compute Interest </button><br>
                     <br>
                     <p><span id="principal_text"></span><span id="principal"></span></p>
                     <p><span id="rangeInput_text"></span><span id="rangeInput"></span></p>
