--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <br>
                     <button onclick="compute();"> Compute Interest </button><br>
                     <br>
-                    <p><span id="principal_text"></span><span id="principal" class="principal_span"></span></p>
+                    <p><span id="principal_text"></span><span id="principal1" class="principal_span"></span></p>
                     <p><span id="rangeInput_text"></span><span id="rangeInput"></span></p>
                     <p><span id="result_text"></span><span id="result"></span><span id="result_comma"></span></p>
                     <p><span id="years_text"></span><span id="result_years"></span></p>
