--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
                     <br>
                     <button onclick="compute();"> Compute Interest </button><br>
                     <br>
-                    <p><span id="principal_text"></span><span id="principal_no"></span></p>
-                    <p><span id="rangeInput_text"></span><span id="rangeInput"></span></p>
+                    <p><span id="principal_text"></span><span id="principal_no"></span></span><span id="principal_end"></span></p>
+                    <p><span id="rangeInput_text"></span><span id="rangeInput_no"></span><span id="rangeInput_end"></span></p>
                     <p><span id="result_text"></span><span id="result"></span><span id="result_comma"></span></p>
                     <p><span id="years_text"></span><span id="result_years"></span></p>
                 </form>
