--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
     <head>
+    <title>Web App – Simple Interest Calculator</title>
     <script src="script.js"></script>
     <link rel="stylesheet" href="style.css">
     </head>
@@ -11,7 +12,7 @@
                     <input type="number" id="principal" name="principal" onkeydown="checkNegativeValue()" value = "Display"><br>
                     <br>
                     <label for="rangeInput">Interest Rate</label>
-                    <input type="range" id="rangeInput" name="rangeInput" value="0" min="0" max="10" step="0.5" oninput="amount.value=rangeInput.value">
+                    <input type="range" id="rangeInput" name="rangeInput" value="1" min="1" max="10" step="0.5" oninput="amount.value=rangeInput.value">
                     <output id="amount" name="amount" for="rangeInput">0<span>%</span></output>
                     <br>
                     <br>
