--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
                     <br>
                     <label for="rangeInput">Interest Rate</label>
                     <input type="range" id="rangeInput" name="rangeInput" value="1" min="1" max="10" step="0.5" oninput="amount.value=rangeInput.value">
-                    <output id="amount" name="amount" for="rangeInput">0<span>%</span></output>
+                    <output id="amount" name="amount" for="rangeInput">1%<span>%</span></output>
                     <br>
                     <br>
                     <label for="years">No. of Years</label>
