--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
             <h1>Simple Interest Calculator</h1>
                 <form>
                     <label for="principal">Amount </label>
-                    <input type="number" id="principal" name="principal" onkeydown="checkNegativeValue()" value = "Display"><br>
+                    <input type="number" id="principal" name="principal" onkeydown="return checkNegativeValue()" value = "Display"><br>
                     <br>
                     <label for="rangeInput">Interest Rate</label>
                     <input type="range" id="rangeInput" name="rangeInput" value="1" min="1" max="20" step="0.5" oninput="amount.value=rangeInput.value">
