--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     </select>
                 
                     <br>
-                    <button onclick="compute()" onclick="return checkNegativeValue()"> Compute Interest </button><br>
+                    <button onclick="return checkNegativeValue(), compute()"> Compute Interest </button><br>
                     <br>
                     <p><span id="principal_text"></span><span id="principal_no"></span></span><span id="principal_end"></span></p>
                     <p><span id="rangeInput_text"></span><span id="rangeInput_no"></span><span id="rangeInput_end"></span></p>
